[tool.poetry]
name = "pan-os-python-youtube"
version = "0.1.0"
description = "Collection of scripts used within the accompanying YouTube video series https://www.youtube.com/watch?v=6aDBQaTI0c0"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pan-os-python = "^1.11.0"
xmltodict = "^0.13.0"
dynaconf = "^3.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
